--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="/users/register">Sign Up</a>
                 </li>
             </ul>
         </div>
