Finished basic layout of homepage

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -42,20 +42,54 @@
     </div>
     <div class="row justify-content-center">
 
-        <p id="thinkBigTXT_2"> You're just a few clicks away from, a stress-free <br> and <span class="organise"> ORGANISED</span> life.</p>
+        <p id="thinkBigTXT_2"> You're just a few clicks away from, a stress-free <br> and <span class="organise" data-aos="fade-in"> ORGANISED</span> life.</p>
 
     </div>
     <!--- Button section ----->
     <div class="row justify-content-center signUp_1">
         <p class="topBtn"> Convinced Yet?</p>
     </div>
-    <div class="row justify-content-center">
-        <button type="button" class="btn-dark btn-lg">Sign Up</button>
+    <div class="row justify-content-center mt-0">
+        <button type="button" class="btn-dark btn-lg mt-0">Sign Up</button>
     </div>
     <div class="row justify-content-center ">
-        <p class="buttomBtn"> No installation Required!</p>
+        <p class="bottomBtn"> No installation Required!</p>
     </div>
 
 
 </div>
 <!----- Think Big Section END---------->
+
+<!--- keep-Organised section ------->
+
+<div class="container pt-5">
+    <div class="row">
+        <div class="col-sm-12">
+            <p class="organisedHdr"> Get Organised..</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <img src="/images/Float_D.png" class="floatIMG img-fluid mx-auto d-block"></div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p class="organisedTxt"> Stay Organised </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p class="wuTxt" data-aos="fade-up"> WITH US </p>
+        </div>
+    </div>
+</div>
+
+<!--- Button Section --->
+<div class="row justify-content-center signUp_1">
+    <p class="topBtn"> Still Reading This? Sign Up Today</p>
+</div>
+<div class="row justify-content-center">
+    <button type="button" class="btn-dark btn-lg">Sign Up</button>
+</div>
+<!--- Butten section END --->
+<!--- keep-Organised section END ------->
