--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,9 @@ html {
     font-family: 'circular' !important;
 }
 
+a {
+    text-decoration: none;
+}
 
 
 /* ------------GENERAL END ----------------*/
@@ -35,6 +38,17 @@ html {
 }
 
 /* ------------ Navbar END ------------*/
+
+/* ------------ FOOTER ------------*/
+
+.page-footer {
+
+    background-color: #2D2D35;
+    font-family: 'circular';
+    color: #444554;
+}
+
+/* ------------ FOOTER END ------------*/
 
 /* ------------ Landing Page ------------*/
 
@@ -124,8 +138,14 @@ html {
     margin: 0;
 }
 
+.bottomBtn {
+    font-size: 90%;
+}
+
+
 .signUp_1 {
-    margin-top: 5em;
+    font-size: 200%;
+    color: #E5D0CC;
 }
 
 
@@ -133,6 +153,34 @@ html {
 /* think big - BUTTON - END */
 
 /*------------------------Think Big Section End------------------------*/
+
+/*------------------------Organised/floating ------------------------*/
+
+.organisedHdr,
+.organisedTxt {
+    font-size: 500%;
+}
+
+.organisedHdr {
+    color: #BFACB5;
+}
+
+.organisedTxt {
+    color: #7F7B82;
+    text-align: center;
+}
+
+.wuTxt {
+    font-size: 700%;
+    text-align: center;
+}
+
+.floatIMG {
+    width: 80%;
+
+}
+
+/*------------------------Organised/floating End------------------------*/
 
 /* ------------ Fonts ------------*/
 
@@ -185,6 +233,6 @@ html {
 
 @media only screen and (max-width: 600px) {
     body {
-        background-color: #BFACB5;
+        background-color: #EFC411 !important;
     }
 }
