Simple Page Update
All buttons configured, add multiple new pages, simple updates.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -50,7 +50,7 @@
         <p class="topBtn"> Convinced Yet?</p>
     </div>
     <div class="row justify-content-center mt-0">
-        <button type="button" class="btn-dark btn-lg mt-0">Sign Up</button>
+        <button type="button" onclick="location.href='/users/register';"class="btn-dark btn-lg mt-0">Sign Up</button>
     </div>
     <div class="row justify-content-center ">
         <p class="bottomBtn"> No installation Required!</p>
@@ -89,7 +89,7 @@
     <p class="topBtn"> Still Reading This? Sign Up Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" class="btn-dark btn-lg">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';" class="btn-dark btn-lg">Sign Up</button>
 </div>
 <!--- Butten section END --->
 <!--- keep-Organised section END ------->
