--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,20 +20,20 @@
 <body>
     <!----------- NAVBAR ----------------->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow p-3 mb-5" style="background-color: #2D2D35; color:#7F7B82;">
-        <a class="navbar-brand " href="#"><img class="logo" src="/images/CloudLogo.png" width="20%" > Cloud</a>
+        <a class="navbar-brand " href="/"><img class="logo" src="/images/CloudLogo.png" width="20%" > Cloud</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link " href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="/aboutUs">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Sign Up</a>
+                    <a class="nav-link" href="/users/login">Sign In</a>
                 </li>
             </ul>
         </div>
@@ -58,11 +58,11 @@
                     <ul class="list-unstyled">
                         <li class="nav-item">
                             <!--- Link to ABOUT US page --->
-                            <a href="#"> About Us</a>
+                            <a href="/aboutUs"> About Us</a>
                         </li>
                         <li class="nav-item">
                             <!--- Link to SIGN UP page --->
-                            <a href="#"> Sign Up</a>
+                            <a href="/users/register"> Sign Up</a>
                         </li>
                         <li class="nav-item">
                             <!--- Link to GITHUB page --->
