--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,9 +1,8 @@
-
 <div style="color: #ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-<div class = "col-md-8 col-md-offset-2 ">
+<div class = "col-md-8 col-md-offset-2">
     <br><br><br><br><br><br><br><br><br>
-    <h2>Create Account</h2>
-    <form class="form-horizontal " role="form" id="reg-form">
+    <h2>Login</h2>
+    <form class="form-horizontal" role="form" id="log-form">
         <div class ="form-group mt">
             <div class="col-sm-10 col-sm-offset-2">
                 <div class = "col-sm-3">
@@ -27,7 +26,7 @@
             </div>
             <div class="form-group">
             <div class="row col-sm-offset-2 col-sm-10 mt">
-                <button type="submit" class="btn btn-warning btn-lg">Create Account</button>
+                <button type="submit" class="btn btn-warning btn-lg">Login</button>
             </div>
             </div>
         <br><br><br><br><br><br><br><br><br><br><br>
