HOMEPAGE REDESIGN - image removed,more text added,buttons,new image

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,15 +25,30 @@
 
 <!-- Think Big Section ----->
 
-<div class="container" id="thinkBig">
-    <div class="row thinkBigH">
-        <p data-aos="fade-in">Don't be afraid to..</p>
+<div class="container text-center" id="thinkBig">
+    <div class="row justify-content-center pt-5 mb-5">
+        <p class="exTxt_1">There comes a time when you need to access files from the mysterious cloud.<br> A handful of time is spent transfering, deleting, organising and re-organising.
+            <br><br> Organisation Doesn't come easy. <br> With our cloud service we help you manage the cloud services in one go.<br>
+            <br> Whatever you need to do. We will help you.<br></p>
 
     </div>
-    <div class="row justify-content-center">
-
-        <img src="/images/thinkBig_D.png" class="thinkBigIMG">
-
+    <div class="row">
+        <div class="col-sm-6 transferTxt movementTxt">
+            <p data-aos="fade-right">Transfer Files.</p>
+        </div>
+        <div class="col-sm-6 deleteTxt movementTxt">
+            <p data-aos="fade-left">Delete Files.</p>
+        </div>
+    </div>
+    <div class="row createNameTxt movementTxt">
+        <div class="col-12">
+            <p class="animated infinite bounce">Create.Name.Save</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 signUp_1">
+            <p> We work hard so you don't have to.</p>
+        </div>
     </div>
     <div class="row justify-content-center">
 
@@ -50,7 +65,7 @@
         <p class="topBtn"> Convinced Yet?</p>
     </div>
     <div class="row justify-content-center mt-0">
-        <button type="button" class="btn-dark btn-lg mt-0">Sign Up</button>
+        <button type="button" class="btn btn-dark">Sign Up</button>
     </div>
     <div class="row justify-content-center ">
         <p class="bottomBtn"> No installation Required!</p>
@@ -89,7 +104,7 @@
     <p class="topBtn"> Still Reading This? Sign Up Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" class="btn-dark btn-lg">Sign Up</button>
+    <button type="button" class="btn btn-dark btn-lg">Sign Up</button>
 </div>
 <!--- Butten section END --->
 <!--- keep-Organised section END ------->
