--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,11 @@ a {
     text-decoration: none;
 }
 
+.btn {
+    border-radius: 50px !important;
+    padding: 10px 50px !important;
+}
+
 
 /* ------------GENERAL END ----------------*/
 
@@ -35,6 +40,7 @@ a {
 
 .nav-item {
     padding: 0 20px;
+    font-size: 1.2em;
 }
 
 /* ------------ Navbar END ------------*/
@@ -43,7 +49,7 @@ a {
 
 .page-footer {
 
-    background-color: #2D2D35;
+    background-color: rgb(0, 0, 0);
     font-family: 'circular';
     color: #444554;
 }
@@ -58,7 +64,7 @@ a {
     background-image: url('/images/Background_D.svg');
     height: 100%;
     width: 100%;
-    background-position: bottom;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -79,7 +85,7 @@ a {
 
 #pt2 {
     padding-top: 10%;
-    padding-bottom: 20%;
+    padding-bottom: 10%;
 }
 
 .row {
@@ -101,14 +107,38 @@ a {
 
 /*--------------------- Think Big Section ------------*/
 
-.thinkBigH {
-    font-size: 5em;
+.cloudsIMG {
+    height: 100%;
+    width: 100%;
+
 }
 
-.thinkBigIMG {
-    width: 70%;
-    height: 70%;
+.exTxt_1 {
+    text-align: center;
+    padding-bottom: 3%;
+    background-image: url('/images/clouds.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
 }
+
+.movementTxt {
+    font-size: 4em;
+}
+
+.deleteTxt {
+    text-align: auto;
+}
+
+.transferTxt {
+    text-align: auto;
+}
+
+.createNameTxt {
+    color: #707070;
+}
+
+/*--------- with us.... part[2] of think big sction -----*/
 
 .thinkBigTXT_1,
 #thinkBigTXT_2 {
@@ -119,7 +149,7 @@ a {
 .thinkBigTXT_1 {
     margin-top: 5%;
     margin-bottom: 10%;
-    font-size: 5em;
+    font-size: 3em;
 
 }
 
@@ -232,7 +262,7 @@ a {
 /* --------------Break-points Media Queries --------------*/
 
 @media only screen and (max-width: 600px) {
-    body {
-        background-color: #EFC411 !important;
+    .exTxt_1 {
+        background-image: none;
     }
 }
