--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,7 @@
     <title>{{title}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--- main styleshee -->
+    <!--- main stylesheet -->
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- styleseet for w3.css-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -15,11 +15,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!-- stylesheet for bootstrap --->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!--- Mdbootstrap.css
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/css/mdb.min.css" rel="stylesheet"> ---------->
 </head>
 
 <body>
     <!----------- NAVBAR ----------------->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow p-3 mb-5" style="background-color: #2D2D35; color:#7F7B82;">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow p-3 mb-5" style="background-color: rgba(0, 0, 0,0.95); color:#7F7B82;">
         <a class="navbar-brand " href="#"><img class="logo" src="/images/CloudLogo.png" width="20%" > Cloud</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,10 +32,16 @@
                     <a class="nav-link " href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <!-- about us link --->
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
+                    <!-- Sign in link -->
                     <a class="nav-link" href="/users/register">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                    <!-- Contavt Section Jump -->
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -92,6 +100,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!--- AOS ---->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!---- Mdbootstrap.js
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.6.1/js/mdb.min.js"></script>----->
 
     <!-- main Javascript file ---->
     <script src="/javascripts/main.js"></script>
