fixed buttons and merge conflict

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -66,7 +66,7 @@
     </div>
     <div class="row justify-content-center mt-0">
 
-        <button type="button" onclick="location.href='/users/register';" class="btn-dark btn-lg mt-0" class="btn btn-dark">Sign Up</button>
+        <button type="button" onclick="location.href='/users/register';" class=" btn btn-dark btn-lg mt-0" class="btn btn-dark">Sign Up</button>
     </div>
     <div class="row justify-content-center ">
         <p class="bottomBtn"> No installation Required!</p>
@@ -105,9 +105,8 @@
     <p class="topBtn"> Still Reading This? Sign Up Today</p>
 </div>
 <div class="row justify-content-center">
-    <<<<<<< HEAD <button type="button" class="btn btn-dark btn-lg">Sign Up</button>
-        =======
-        <button type="button" onclick="location.href='/users/register';" class="btn-dark btn-lg">Sign Up</button> >>>>>>> f4a955b790991de1cb2209d56700d85e4d181db3
+    <button type="button" onclick="location.href='/users/register';" class="btn btn-dark btn-lg">Sign Up</button>
+
 </div>
 <!--- Butten section END --->
 <!--- keep-Organised section END ------->
