--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,10 +22,11 @@
 
 </div>
 <!----- After Landing page End ---------->
+<!-- cloud image --->
+<img class="cloudIMG" src="/images/clouds.svg">
 
-<!-- Think Big Section ----->
-
-<div class="container text-center" id="thinkBig">
+<!--- GRey Section--->
+<div class="container-fluid greySec text-center mt-5">
     <div class="row justify-content-center pt-5 mb-5">
         <p class="exTxt_1">There comes a time when you need to access files from the mysterious cloud.<br> A handful of time is spent transfering, deleting, organising and re-organising.
             <br><br> Organisation Doesn't come easy. <br> With our cloud service we help you manage the cloud services in one go.<br>
@@ -34,34 +35,42 @@
     </div>
     <div class="row">
         <div class="col-sm-6 transferTxt movementTxt">
-            <p data-aos="fade-right">Transfer Files.</p>
+            <p data-aos="fade-down">Transfer Files.</p>
         </div>
         <div class="col-sm-6 deleteTxt movementTxt">
-            <p data-aos="fade-left">Delete Files.</p>
+            <p data-aos="fade-up">Delete Files.</p>
         </div>
     </div>
-    <div class="row createNameTxt movementTxt">
+    <div class="row createNameTxt movementTxt mt-5">
         <div class="col-12">
             <p class="animated infinite bounce">Create.Name.Save</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-5">
         <div class="col-12 signUp_1">
             <p> We work hard so you don't have to.</p>
         </div>
     </div>
+</div>
+<!--- end of grey section --->
+
+<!-- Think Big Section ----->
+
+<div class="container-fluid text-center" id="thinkBig">
     <div class="row justify-content-center">
 
-        <p class="thinkBigTXT_1"> With us it's easy to keep<br> track of all the files that you<br> may have</p>
+        <p class="thinkBigTXT_1">
+            Before storage was a big problem.<br><br> <span id="nowTxt">Now it is not!</span><br> But that means that it's easy to get caught up in all the<br> <span id="bigDataTxt">BIG DATA.</span><br> But not with us....<br><br> With us it's easy to keep track of all the files that you may have.<br></p>
 
     </div>
     <div class="row justify-content-center">
 
-        <p id="thinkBigTXT_2"> You're just a few clicks away from, a stress-free <br> and <span class="organise" data-aos="fade-in"> ORGANISED</span> life.</p>
+        <p id="thinkBigTXT_2">
+            <span id="and">&amp;</span><br>You're just a few clicks away from, a stress-free <br> and <span class="organise" data-aos="fade-in" data-aos-anchor-placement="bottom-bottom"> ORGANISED</span> life.</p>
 
     </div>
     <!--- Button section ----->
-    <div class="row justify-content-center signUp_1">
+    <div class="row justify-content-center signUp_1 mt-3">
         <p class="topBtn"> Convinced Yet?</p>
     </div>
     <div class="row justify-content-center mt-0">
@@ -110,3 +119,10 @@
 </div>
 <!--- Butten section END --->
 <!--- keep-Organised section END ------->
+
+<!--- Resource Section------------->
+<!-- section contain cloud services we handle ----->
+<div class="container-fluid mt-5 greySec text-center">
+    <h1> Resources...</h1>
+    <h5> We our always updating the list of services that we provide.</h5>
+</div>
