--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
     <!----------- NAVBAR ----------------->
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top shadow p-3 mb-5" style="background-color: rgba(0, 0, 0,0.95); color:#7F7B82;">
-        <a class="navbar-brand " href="/"><img class="logo" src="/images/CloudLogo.png" width="20%" > Cloud</a>
+        <a class="navbar-brand" href="/"><img class="logoIMG" src="/images/CloudLogo.png" width="20%">Cloud</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
 
     <!---------------- Footer ----------------->
 
-    <footer class="page-footer font-medium mt-5 pt-5">
+    <footer class="page-footer font-medium pt-5">
         <div class="container-fluid text-center tx-md-left ">
             <div class="row">
 
